Nav bar complete and linked to every html files for correct jump to files

--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
-td, th{
-    border: 3px solid royalblue;
-    padding: 10px 30px;
-    font-size: larger;
-    font-weight: 700    ;
+td,
+th {
+  border: 3px solid royalblue;
+  padding: 10px 30px;
+  font-size: larger;
+  font-weight: 700;
 }
-table{
-    border-collapse: collapse;
+table {
+  border-collapse: collapse;
 }
